# python-project-template

./: .envrc  .gitignore  Dockerfile  README.md  justfile  mkdocs.yml  pyproject.toml
docs/: index.md
features/: csvfilter.feature
features/steps/: csvfilter.py
src/app/: __init__.py  app.py  config.py  di.py  filtering.py  io.py  main.py
tests/: test_app.py  test_di.py  test_filtering.py  test_main.py
