[project]
name = "app"
version = "0.1.0"
description = "App"
authors = [
    { name = "Anna van Biemen", email = "annavanbiemen@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest]
addopts = "--cov=src"
pythonpath = "src"
testpaths = ["tests"]

[tool.behave]
