[project]
name = "app"
version = "0.1.0"
description = "App"
authors = [
    { name = "Anna van Biemen", email = "annavanbiemen@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "uv-build>=0.7.6",
]

[project.scripts]
app = "app.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "behave>=1.2.6",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
    "uv-secure>=0.9.1",
]

[tool.pytest]
addopts = "--cov=src"
pythonpath = "src"
testpaths = ["tests"]

[tool.behave]

[tool.pylint]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
]
ignore = ['.git', '.venv']

[tool.flake8]
exclude = ['git', '.venv']
