[project]
name = "app"
version = "0.1.0"
description = "App"
authors = [
    { name = "Anna van Biemen", email = "annavanbiemen@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app.main:main"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "behave>=1.2.6",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "pyfakefs>=5.8.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.10",
    "uv-secure>=0.9.1",
]

[tool.uv]
package = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D203", # incorrect-blank-line-before-class (incompatible with D211)
    "D212", # multi-line-summary-first-line (imcompatible with D213)
    "COM812", # conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN", # annotations
    "D1", # missing docstring
    "S101", # assert
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-branch --cov-fail-under=100"
pythonpath = "src"
testpaths = ["tests"]

[tool.behave]
